# CoreWrapCPP

./: .gitignore  CMakeLists.txt
examples/CFNumberPlayground/: CFNumberPlayground.cpp  CMakeLists.txt
examples/RetainLeaker/: CMakeLists.txt  RetainLeaker.cpp
include/: ExportVisibility.h
include/CF/: Boolean.hpp  Dictionary.hpp  Number.hpp  String.hpp  TypeInterface.hpp
src/CF/: AddressSanitizerOptions.cpp  Boolean.cpp  CoreFoundationLoader.cpp  Dictionary.cpp  Number.cpp  String.cpp  TypeInterface.cpp
tests/: BoostCPPtest.cmake  CFBooleanTest.cpp  CFDictionaryTest.cpp  CFNumberTest.cpp  CFStringTest.cpp  CMakeLists.txt  ProfilerInstrumentation.cpp  XCTestBoostAdapter.mm
